RESOLVED FIXED144299
PDF action menu fixes
https://bugs.webkit.org/show_bug.cgi?id=144299
Summary PDF action menu fixes
Brent Fulgham
Reported 2015-04-27 17:52:58 PDT
After playing with the recent PDF updates, we noticed two problems: 1. The TextIdentifier (yellow highlights) shown when displaying a definition for a word were slightly offset. 2. Zooming out the PDF so that multiple pages were shown in the same WebView caused improper display of the dictionary overlay.
Attachments
Patch (4.71 KB, patch)
2015-04-27 17:58 PDT, Brent Fulgham
thorton: review+
Brent Fulgham
Comment 1 2015-04-27 17:53:38 PDT
Brent Fulgham
Comment 2 2015-04-27 17:58:47 PDT
Tim Horton
Comment 3 2015-04-27 18:26:57 PDT
Comment on attachment 251799 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=251799&action=review > Source/WebKit2/WebProcess/WebPage/mac/WebPageMac.mm:625 > + // Based on TextIndicator implementation: > + CGFloat verticalMargin = 2.5; > + CGFloat horizontalMargin = 0.5; We should (separately) figure out a way to make this not be copied into clients who aren't TextIndicator
Brent Fulgham
Comment 4 2015-04-27 19:44:50 PDT
Note You need to log in before you can comment on or make changes to this bug.